<resources>
    <string name="app_name">PROYECTO FINAL</string>
    <string name="UANL">UANL</string>
    <string name="FCQ">FCQ</string>
    <string name="panel_de_acceso">PANEL DE ACCESO</string>
    <string name="inicia_sesi_n_txt">inicia sesión</string>
    <string name="tipo_txt">Tipo:</string>
    <string name="correo_txt">Correo:</string>
    <string name="contrase_a_txt">Contraseña:</string>
    <string name="iniciar_sesi_n_btn">Iniciar Sesión</string>
    <string name="duda">TODO</string>
    <string name="bienvenido_depto_de_inform_tica">Bienvenido, Depto. de informática</string>
    <string name="informatica_quimicas">TODO</string>
    <string name="cerrar_sesi_n_btn">Cerrar Sesión</string>
    <string name="estudiantes_btn">ESTUDIANTES</string>
    <string name="crear_cuenta_de_acceso">Crear cuenta de acceso</string>
    <string name="control_de_acceso">control de acceso</string>
    <string name="rol_semanal">rol semanal</string>
    <string name="notificar">notificar</string>
    <string name="fcq_logo">TODO</string>
    <string name="icono_mensajes">TODO</string>
    <string name="fondo">TODO</string>
    <string name="codigo_qr">codigo QR</string>
    <string name="perfil">perfil</string>
    <string name="rol_semamal">Rol semamal</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="icono_mensajes_becario">TODO</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="logo_informatica_quimicas">TODO</string>
    <string name="ingresar_correo">ingresar correo</string>
    <string name="escanear_codigo">Escanear codigo</string>
    <string name="cerrar_sesi_n_scanner">Cerrar sesión</string>
    <string name="icono_camara_scanner">TODO</string>
    <string name="validar_acceso_txt">Validar Acceso</string>
    <string name="validar_btn">validar</string>
    <string name="email_inp">Email</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="preguntas_frecuentes">Preguntas frecuentes</string>
    <string name="pregunta_1">¿Qué necesito para tener una cuenta?</string>
    <string name="respuesta_1">Estimado Alumno, para tener acceso a una debes contar con una cuenta previamente otorgada por tu responsable</string>
    <string name="respuesta_2">Estimado Alumno, el rol semanal es la rotacion del personal, es decir que podras verificar el piso a cubrir o bien si te toca el descanzo en la semana correspondiente del rol</string>
    <string name="pregunta_2">¿Qué es el Rol Semanal?</string>
    <string name="pregunta_3">¿Si me faltan horas por cubrir, me dan de baja?</string>
    <string name="respuesta_3">Estimado alumno, recuerda que debes de curbrir un minimo de 20 hrsa la semana , en caso de deber horas, tu responable te dara indicaciones, recuerda que para baja definitica debe de incumplir con el reglamento universitario</string>
    <string name="regresar_al_panel_btn">Regresar al panel</string>
    <string name="icono_duda">TODO</string>
    <string name="duda_btn">TODO</string>
    <string name="email_validar_acceso">Email</string>
    <string name="email_in">Email</string>
    <string name="usuario_becario">Bienvenido, 1675010</string>
    <string name="c_digo_qr_titulo">Código Qr</string>
    <string name="cerrar_sesi_n_codigo_qr">Cerrar Sesión</string>
    <string name="qr_becario">TODO</string>
    <string name="matricula_Qr">1675010</string>
    <string name="rol_semanal_titulo">Rol Semanal</string>
    <string name="rol_semanal_titulo2">Rol semanal</string>
    <string name="rotaci_n_del_personal_titulo3">Rotación del personal</string>
    <string name="rol_semanal_img">TODO</string>
    <string name="cerrar_sesion_rol_semanal">Cerrar sesion</string>
    <string name="notificaciones_becario">Notificaciones</string>
    <string name="notificaci_n_titulo1">Notificación</string>
    <string name="notificacion_txt">Apreciable alumno, revisa continuamente los avisosproporcionados por tu responsable.</string>
    <string name="perfil_titulo">Perfil</string>
    <string name="perfil_titulo2">Perfil</string>
    <string name="datos_de_la_cuenta">Datos de la cuenta</string>
    <string name="matricula_txt">Matricula:</string>
    <string name="nombre_txt">Nombre:</string>
    <string name="rol_txt">Rol:</string>
    <string name="correo_txt_perfil_becario">Correo:</string>
    <string name="contrase_a_txt_perfil_becario">Contraseña:</string>
    <string name="telefono_txt">Telefono</string>
    <string name="estudiantes_titulo">Estudiantes</string>
    <string name="estudiantes_titulo2">Estudiantes</string>
    <string name="Estudiantes_txt">Lista de estudiantes del departamento de informatica</string>
    <string name="buscar_txt">Buscar:</string>
    <string name="find_input">Find</string>
    <string name="crear_cuentas_de_acceso_titulo">Crear cuentas de acceso</string>
    <string name="administrar_personal_titulo2">Administrar personal</string>
    <string name="Crear_cuentas_de_acceso_txt">Generar cuentas para el personal de acceso</string>
    <string name="buscar_txt_crear_cuentas_de_acceso">Buscar:</string>
    <string name="find_crear_cuentas_de_acceso">Find</string>
    <string name="crear_cuenta_crear_cuentas_de_acceso">Crear Cuenta</string>
    <string name="aceptar_btn_administrador">Aceptar</string>
    <string name="foto_de_perfil_admin">Foto de perfil</string>
    <string name="generar_codigo_qr">Generar codigo Qr</string>
    <string name="control_de_acceso_admin">Control de acceso</string>
    <string name="descargar_excel">Descargar Excel</string>
    <string name="control_de_acceso_txt">Descargar control de acceso del personal</string>
    <string name="buscar_ctrl_de_acceso">Buscar:</string>
    <string name="find_ctrl_de_acceso">Find</string>
    <string name="desde">DESDE:</string>
    <string name="hasta">HASTA:</string>
    <string name="ctrl_de_acceso_txt2">Administrador, se le recuerda que al no escoger fechas, se descargara un reporte inicial de registro</string>
    <string name="exportar_listado_de_excel">Exportar listado de Excel</string>
    <string name="rol_semanal_titulo_administrador">Rol semanal</string>
    <string name="rol_semanal_titulo2_administrador">Rol semanal</string>
    <string name="rotacion_de_personal">Rotacion de personal</string>
    <string name="importar_rol">Importar Rol</string>
    <string name="notificar_administrador">Notificar</string>
    <string name="enviar_notificaci_n_titulo2">Enviar notificación</string>
    <string name="notificar_txt2">Se enviara una notificación a todo el personal registrado</string>
    <string name="enviar_a">Enviar a:</string>
    <string name="titulo_notificar_administrador">Titulo:</string>
    <string name="mensaje_notificar_administrador">Mensaje</string>
    <string name="enviar_btn">enviar</string>
    <string name="chat_titulo">Chat</string>
    <string name="buscar_chat">Buscar</string>
    <string name="btn_nuevo_chat">+ Nuevo Chat</string>
    <string name="scanner">Scanner</string>
</resources>