<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrador">

    <Button
        android:id="@+id/btn_scanner"
        android:layout_width="336dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/scanner"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rol_semanal_admin"
        tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/bienvenido_depto_de_inform_tica"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/informatica_quimicas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/informatica_quimicas"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/cerrar_sesion"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="48dp"
        android:background="#0041BF"
        android:text="@string/cerrar_sesi_n_btn"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btn_estudiantes"
        android:layout_width="336dp"
        android:layout_height="51dp"
        android:layout_marginTop="190dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/estudiantes_btn"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_control_de_acceso"
        android:layout_width="336dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/control_de_acceso"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_crear_cuenta_de_acceso"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_rol_semanal_admin"
        android:layout_width="336dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/rol_semanal"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_control_de_acceso"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_crear_cuenta_de_acceso"
        android:layout_width="336dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/crear_cuenta_de_acceso"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_estudiantes"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="123dp"
        android:layout_height="72dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/fcq_logo"
        android:contentDescription="@string/fcq_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>