<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_informaticas"
    tools:context=".Becario">

    <Button
        android:id="@+id/codigo_qr_btn_becario"
        android:layout_width="336dp"
        android:layout_height="51dp"
        android:layout_marginTop="275dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/codigo_qr"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_perfil"
        android:layout_width="336dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/perfil"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rol_semanal"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_rol_semanal"
        android:layout_width="336dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/rol_semamal"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codigo_qr_btn_becario"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/cerrar_sesion_becario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="36dp"
        android:text="@string/cerrar_sesi_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#880501"
        android:paddingTop="13dp"
        android:text="@string/usuario_becario"
        android:textAlignment="center"
        android:textColor="#F6F6F6"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/logo_informatica_quimicas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/informatica_quimicas"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>